2008-03-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstregistrybinary.c: (gst_registry_binary_write):
	Rename constant everywhere and don't forget one occurence.

2008-03-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstregistrybinary.c: (gst_registry_binary_write):
	Align memory to the pointer size even if the architecture allows
	unaligned memory access. Unaligned memory access usually comes with
	performance penality.

2008-03-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstregistrybinary.c: (gst_registry_binary_write),
	(gst_registry_binary_check_magic),
	(gst_registry_binary_load_pad_template),
	(gst_registry_binary_load_feature),
	(gst_registry_binary_load_plugin):
	Align memory to the pointer size instead of always 32 bit. Fixes
	unaligned memory accesses on ia64 and friends.

	* gst/gstregistrybinary.h:
	Bump binary registry format version for this as it changes the
	format on those architectures that don't have unaligned access
	and 64 bit pointers.

2008-03-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* docs/pwg/advanced-dparams.xml:
	* docs/pwg/building-props.xml:
	* docs/pwg/other-source.xml:
	* gst/glib-compat.h:
	* gst/gstbin.c: (gst_bin_class_init):
	* gst/gstclock.c: (gst_clock_class_init):
	* gst/gstindex.c: (gst_index_class_init):
	* gst/gstobject.c: (gst_object_class_init):
	* gst/gstpad.c: (gst_pad_class_init):
	* gst/gstpipeline.c: (gst_pipeline_class_init):
	* libs/gst/base/gstbasesink.c: (gst_base_sink_class_init):
	* libs/gst/base/gstbasesrc.c: (gst_base_src_class_init):
	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_class_init):
	* libs/gst/base/gstdataqueue.c: (gst_data_queue_class_init):
	* libs/gst/check/gstcheck.c: (_gst_check_fault_handler_restore),
	(_gst_check_fault_handler_sighandler),
	(_gst_check_fault_handler_setup), (gst_check_init):
	* libs/gst/controller/gstcontroller.c:
	(_gst_controller_class_init):
	* libs/gst/controller/gstlfocontrolsource.c: