@@ -1,3 +1,8 @@
+2008-03-23  Rene Stadler  <mail@renestadler.de>
+
+	* libs/gst/base/gstbasetransform.c:
+	(gst_base_transform_set_gap_aware): Fix confusing documentation.
+
 2008-03-23  Sebastian Dröge  <slomo@circular-chaos.org>
 
 	* gst/gstregistrybinary.c: (gst_registry_binary_write):
